@@ -1,35 +1,67 @@
+# =========================================================================
+# THIS FILE IS AUTOMATICALLY GENERATED BY MINILLA.
+# DO NOT EDIT DIRECTLY.
+# =========================================================================
+
+use 5.008_001;
+
 use strict;
 use warnings;
+use utf8;
+
 use Module::Build;
+use File::Basename;
+use File::Spec;
+use CPAN::Meta;
+use CPAN::Meta::Prereqs;
 
-my $builder = Module::Build->new(
-    name                => 'Acme-SuddenlyDeath',
-    module_name         => 'Acme::SuddenlyDeath',
-    license             => 'perl',
-    dist_author         => q{papix <mail@papix.net>},
-    dist_version_from   => 'lib/Acme/SuddenlyDeath.pm',
-    dynamic_config    => 0,
+my %args = (
+    license              => 'perl',
+    dynamic_config       => 0,
 
-    build_requires => {
-        'Test::More' => '0.98',
-        'Encode'     => '2.39',
-    },
     configure_requires => {
-        'Module::Build' => '0.40',
-    },
-    requires => {
-        'base' => 0,
-        'Text::VisualWidth' => '0.02',
+        'Module::Build' => 0.38,
     },
 
-    no_index => { 'directory' => ['inc'] },
+    name        => 'Acme-SuddenlyDeath',
+    module_name => 'Acme::SuddenlyDeath',
 
-    test_files => (-d '.git' || $ENV{RELEASE_TESTING}) ? 't/ xt/' : 't/',
+    script_files => [glob('script/*'), glob('bin/*')],
+
+    test_files           => ((-d '.git' || $ENV{RELEASE_TESTING}) && -d 'xt') ? 't/ xt/' : 't/',
     recursive_test_files => 1,
-
-    add_to_cleanup => [ 'Acme-SuddenlyDeath-*' ],
-    create_readme  => 1,
-    create_license => 1,
 );
+if (-d 'share') {
+    $args{share_dir} = 'share';
+}
 
+my $builder = Module::Build->subclass(
+    class => 'MyBuilder',
+    code => q{
+        sub ACTION_distmeta {
+            die "Do not run distmeta. Install Minilla and `minil install` instead.\n";
+        }
+        sub ACTION_installdeps {
+            die "Do not run installdeps. Run `cpanm --installdeps .` instead.\n";
+        }
+    }
+)->new(%args);
 $builder->create_build_script();
+
+my $mbmeta = CPAN::Meta->load_file('MYMETA.json');
+my $meta = CPAN::Meta->load_file('META.json');
+my $prereqs_hash = CPAN::Meta::Prereqs->new(
+    $meta->prereqs
+)->with_merged_prereqs(
+    CPAN::Meta::Prereqs->new($mbmeta->prereqs)
+)->as_string_hash;
+my $mymeta = CPAN::Meta->new(
+    {
+        %{$meta->as_struct},
+        prereqs => $prereqs_hash
+    }
+);
+print "Merging cpanfile prereqs to MYMETA.yml\n";
+$mymeta->save('MYMETA.yml', { version => 1.4 });
+print "Merging cpanfile prereqs to MYMETA.json\n";
+$mymeta->save('MYMETA.json', { version => 2 });
