@@ -1,25 +1,0 @@
-~$
-\.bak$
-^\.gitignore$
-^\.git/
-blib/
-pm_to_blib
-^\.prove$
-^ignore\.txt$
-^Makefile$
-^MANIFEST\.
-\.tar\.gz
-\.lwpcookies
-^ignore.txt$
-^README.pod$
-^t/perlcritic.t$
-^t/pod-coverage.t$
-^t/pod.t$
-.shipit
-^Makefile.old$
-^t/rewrite$
-^MYMETA\.yml$
-^MYMETA\.json$
-_build/
-^Build$
-Acme-SuddenlyDeath
